force-app/main/default/objects/cgcloud__Template_Field_Mapping__mdt/cgcloud__Template_Field_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Template Field Mapping</label>
    <pluralLabel>Template Field Mappings</pluralLabel>
</CustomObject>