force-app/main/default/objects/cgcloud__Template_Field_Mapping__mdt/fields/cgcloud__Target_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Target_Field_Name__c</fullName>
    <label>Target Field Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>