force-app/main/default/objects/cgcloud__Template_Field_Mapping__mdt/fields/cgcloud__Template_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Template_Type__c</fullName>
    <description>Template type for the field mapping</description>
    <inlineHelpText>Template type for the field mapping</inlineHelpText>
    <label>Template Type</label>
    <referenceTo>cgcloud__Template_Type__mdt</referenceTo>
    <relationshipLabel>Template Field Mappings</relationshipLabel>
    <relationshipName>Template_Field_Mappings</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>